--- a/app/scss/var.scss
+++ b/app/scss/var.scss
@@ -5,6 +5,7 @@ $main-ff-bold: 'Poppins-Bold', sans-serif;
 // Colors
 $mainDark: #111111;
 $secondDark: #1E1E1E;
+$thirdDark: #4E4E4E;
 
 $mainGray: #696969;
 $secondGray: #8B8B8B;
@@ -13,3 +14,4 @@ $lightGray: #DEDEDE;
 $whiteGray: #EDF1FA;
 
 $mainBlue: #0052FF;
+$mainRed: #E63A0F;
