--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -10,6 +10,7 @@
 @import 'base/animations.scss';
 @import 'modules/buttons';
 @import 'modules/slider';
+@import 'modules/nopage';
 
 // modules
 @import 'modules/header';
