--- a/app/css/main.css
+++ b/app/css/main.css
@@ -614,6 +614,37 @@ main {
     background-color: #0052ff;
     transform: translateX(-100%); }
 
+.nopage {
+  height: calc(100vh - 79px); }
+  @media (max-width: 768px) {
+    .nopage {
+      padding-right: 24px; } }
+  .nopage .container {
+    height: 100%;
+    flex-direction: column;
+    align-items: end; }
+  .nopage-bg {
+    position: absolute;
+    z-index: -10;
+    right: 0;
+    bottom: 0; }
+  .nopage-title {
+    margin-bottom: 24px;
+    color: #fff;
+    font-family: "Poppins-Bold", sans-serif;
+    font-size: 48px;
+    line-height: 64px;
+    margin-bottom: 8px; }
+    @media (max-width: 768px) {
+      .nopage-title {
+        font-size: 30px;
+        line-height: 46px; } }
+  .nopage-text {
+    font-size: 16px;
+    line-height: 25px;
+    color: #8B8B8B;
+    margin-bottom: 60px; }
+
 .header {
   width: 100%;
   padding: 38px 0 0;
