--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -11,6 +11,7 @@
 @import 'modules/buttons';
 @import 'modules/slider';
 @import 'modules/nopage';
+@import 'modules/cookies-popup';
 
 // modules
 @import 'modules/header';
