--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -12,6 +12,9 @@
 @import 'modules/slider';
 @import 'modules/nopage';
 @import 'modules/cookies-popup';
+@import 'modules/cookie-policy';
+@import 'modules/privacy-policy';
+@import 'modules/terms-and-conditions';
 
 // modules
 @import 'modules/header';
