--- a/app/scss/modules/about-us.scss
+++ b/app/scss/modules/about-us.scss
@@ -12,11 +12,11 @@
   }
 
   &-content {
-    padding: 180px 100px 0 165px;
+    padding: 180px 100px 175px 165px;
     background-color: $lightGray;
 
     @include lg {
-      padding: 100px 30px 0 130px;
+      padding: 100px 30px 100px 130px;
     }
 
     @include sm {
@@ -60,11 +60,6 @@
     }
 
     &__link {
-      padding-bottom: 175px;
-
-      @include lg {
-        padding-bottom: 100px;
-      }
 
       &:before {
         content: "";
