--- a/app/scss/modules/solutions.scss
+++ b/app/scss/modules/solutions.scss
@@ -10,6 +10,7 @@ $listItemMargin: 10px;
     font-family: $main-ff-bold;
     font-size: 48px;
     line-height: 72px;
+    padding-top: 30px;
   }
 
   &-grid {
